// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelsCreatePage displays alert if submit fails 1`] = `
<div>
  <Alert
    liveRegionPoliteness="assertive"
    margin="x-small 0"
    open={true}
    screenReaderOnly={false}
    timeout={0}
    transition="fade"
    variant="error"
  >
    some error
  </Alert>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h1"
    margin="medium"
  >
    Add Model
  </Heading>
  <FormTextInput
    identifier="name"
    label="Name"
    onChange={[Function]}
    required={true}
    value=""
  />
  <FormSelect
    defaultOptionLabel="Select an OEM"
    disabled={false}
    identifier="oemId"
    label="OEM"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 1,
          "name": "OEM 1",
        },
        Object {
          "id": 2,
          "name": "OEM 2",
        },
        Object {
          "id": 3,
          "name": "OEM 3",
        },
      ]
    }
    required={true}
    value={null}
  />
  <Button
    as="button"
    buttonRef={[Function]}
    cursor="pointer"
    disabled={true}
    fluidWidth={false}
    margin="0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="default"
  >
    Submit
  </Button>
</div>
`;

exports[`ModelsCreatePage enables submit if fields are valid 1`] = `
<div>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h1"
    margin="medium"
  >
    Add Model
  </Heading>
  <FormTextInput
    identifier="name"
    label="Name"
    onChange={[Function]}
    required={true}
    value="Model 1"
  />
  <FormSelect
    defaultOptionLabel="Select an OEM"
    disabled={false}
    identifier="oemId"
    label="OEM"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 1,
          "name": "OEM 1",
        },
        Object {
          "id": 2,
          "name": "OEM 2",
        },
        Object {
          "id": 3,
          "name": "OEM 3",
        },
      ]
    }
    required={true}
    value={1}
  />
  <Button
    as="button"
    buttonRef={[Function]}
    cursor="pointer"
    disabled={false}
    fluidWidth={false}
    margin="0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="default"
  >
    Submit
  </Button>
</div>
`;

exports[`ModelsCreatePage renders an error if load fails 1`] = `
<Alert
  liveRegionPoliteness="assertive"
  margin="x-small 0"
  open={true}
  screenReaderOnly={false}
  timeout={0}
  transition="fade"
  variant="error"
>
  some error
</Alert>
`;

exports[`ModelsCreatePage renders form if load succeeds 1`] = `
<div>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h1"
    margin="medium"
  >
    Add Model
  </Heading>
  <FormTextInput
    identifier="name"
    label="Name"
    onChange={[Function]}
    required={true}
    value=""
  />
  <FormSelect
    defaultOptionLabel="Select an OEM"
    disabled={false}
    identifier="oemId"
    label="OEM"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 1,
          "name": "OEM 1",
        },
        Object {
          "id": 2,
          "name": "OEM 2",
        },
        Object {
          "id": 3,
          "name": "OEM 3",
        },
      ]
    }
    required={true}
    value={null}
  />
  <Button
    as="button"
    buttonRef={[Function]}
    cursor="pointer"
    disabled={true}
    fluidWidth={false}
    margin="0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="default"
  >
    Submit
  </Button>
</div>
`;

exports[`ModelsCreatePage renders spinner if not yet loaded 1`] = `
<Spinner
  as="div"
  renderTitle="Loading"
  size="large"
  variant="default"
/>
`;
